typescript/checker/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassIncludesInheritedMembers.ts.stderr
error: NoNewSignature {
    span: Span {
        lo: BytePos(
            281,
        ),
        hi: BytePos(
            288,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassIncludesInheritedMembers.ts:18:22
   |
18 | var d: Derived = new Derived(1);
   |                      ^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            303,
        ),
        hi: BytePos(
            304,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassIncludesInheritedMembers.ts:19:10
   |
19 | var r1 = d.a;
   |          ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            318,
        ),
        hi: BytePos(
            319,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassIncludesInheritedMembers.ts:20:10
   |
20 | var r2 = d.b();
   |          ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            335,
        ),
        hi: BytePos(
            336,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassIncludesInheritedMembers.ts:21:10
   |
21 | var r3 = d.c;
   |          ^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            389,
        ),
        hi: BytePos(
            391,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassIncludesInheritedMembers.ts:24:17
   |
24 | var r5 = Derived.s();
   |                 ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            547,
        ),
        hi: BytePos(
            549,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassIncludesInheritedMembers.ts:36:5
   |
36 | var d2: Derived2;
   |     ^^

